--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "hybrid_generator.c"
+idf_component_register(SRCS "main.c" "context.c" "storage.c" "wifi.c" "smartconfig.c"
                     INCLUDE_DIRS ".")
